Restore the blue highlight for GTK on Omnibox results.

The way GTK theming is plumbed through is very subtle, and we don't
know yet how that should influence new color schemes.

This CL tries to isolate (and make explicit) the complexity required
for GTK theming on Desktop Linux by introducing OmniboxTint::NATIVE,
as distinct from LIGHT and DARK used everywhere else.

Bug: 819425, 801583
Change-Id: I34ad8113f5e66843dab685c3ce3470dd7bd7f675
Reviewed-on: https://chromium-review.googlesource.com/952503
Commit-Queue: Peter Kasting <pkasting@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#541570}
Former-commit-id: 50245fb1338161b47a2a8ef8801b6ded44f09d85